--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titulo</title>
+    <title>Título</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -17,7 +17,7 @@
             <nav>
                 <ul>
                     <li><a href="">Inicio</a></li>
-                    <li><a href="">Galeria</a></li>
+                    <li><a href="">Galería</a></li>
                     <li><a href="">Contacto</a></li>
                     <li><a href="">Sobre Nosotros</a></li>
                 </ul>
@@ -32,7 +32,7 @@
             </div>
             <!-- La etiqueta <section> representa una sección genérica de contenido cuando no hay un elemento semántico más específico para representarlo. -->
             <section>
-                <h3>Seccion de Noticias</h3>
+                <h3>Sección de Noticias</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit, consequatur. Tenetur maxime labore
                     quam, nihil libero ab sunt rerum necessitatibus in quod repudiandae sapiente dicta reiciendis
                     quaerat. Voluptatum, alias porro. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit, consequatur. Tenetur maxime labore
@@ -49,7 +49,7 @@
                     quam, nihil libero ab sunt rerum necessitatibus in quod repudiandae sapiente dicta reiciendis
                     quaerat. Voluptatum, alias porro. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit, consequatur. Tenetur maxime labore
                     quam, nihil libero ab sunt rerum necessitatibus in quod repudiandae sapiente dicta reiciendis
-                    quaerat. Voluptatum, alias porro.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit, consequatur. Tenetur maxime labore
+                    quaerat. Voluptatum, alias porro. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit, consequatur. Tenetur maxime labore
                     quam, nihil libero ab sunt rerum necessitatibus in quod repudiandae sapiente dicta reiciendis
                     quaerat. Voluptatum, alias porro.
                 </p>
